<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">康洁源</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="dispatchings">配送</string>
    <string name="customers">商家</string>
    <string name="me">我的</string>
    <string name="userinfo">我的资料</string>
    <string name="updatepsw">更改密码</string>
    <string name="updateversion">版本更新</string>
    <string name="printerset">打印设置</string>
    <string name="aboutus">关于我们</string>
    <string name="logout">退出登录</string>
    <string name="login">登录</string>
    
    <string name="password">密　码</string>
    <string name="username">账　号</string>
    <string name="oldpwd">原密码</string>
    <string name="newpwd">新密码</string>
    
    
    <string name="customerInfo">商家信息</string>
    <string name="storeId">编号</string>
    <string name="storeName">店名</string>
    <string name="storeBoss">店主</string>
    <string name="production">型号</string>
    <string name="unitPrice">单价</string>
    <string name="storeAddress">地址</string>
    <string name="callStorePhone">拨打电话</string>
    <string name="putoff">开始卸货</string>
    
    <string name="dispatchInfo">配送信息</string>
    <string name="onDispatching">正在配送中</string>
    <string name="dispatchPerson">配送员</string>
    <string name="dispatchCar">车牌号</string>
    <string name="dispatchStartTime">开始于</string>
    <string name="dispatchOver">结束配送</string>
    <string name="dispatchStart">开始配送</string>
    
    <string name="putoffinto">卸货信息</string>
    <string name="putoffcustomer">卸货商家</string>
    <string name="putoffNum">卸货量(箱)</string>
    <string name="putonNum">返货量(箱)</string>
    <string name="settletype">结算方式</string>
    <string name="money">现金</string>
    <string name="debt">欠款</string>
    <string name="sendMess">去结算</string>
    <string name="payok">完成</string>
    
    <string name="backto">返回</string>
    <string name="guideleft">点击左上角加号，开始进行配送</string>
    <string name="guideright">点击右上角加号，扫描商家二维码</string>
    <string name="instruction">盘锦康洁源餐具消毒有限公司是盘锦市大型的，专业的餐具消毒中心。</string>
    
    <string name="hint_account">你的账号</string>
    <string name="hint_password">填写密码</string>
    

</resources>
