<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <ScrollView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:scrollbars="none">
		<LinearLayout
			android:orientation="vertical"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			
	<!-- 	    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_weight="0.06"
        android:orientation="vertical" >
 -->
        <TextView
            style="@style/TxtTitle"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:background="@drawable/setting_item_selector"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:paddingRight="10dp"
            android:layout_marginTop="22dp"
            android:text="@string/onDispatching"
            android:textSize="16sp" />

		   
        
        <TextView
            android:id="@+id/txt_dispatchPerson"
            style="@style/TxtTitle"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/setting_item_selector"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:paddingRight="10dp"
            android:text="@string/dispatchPerson"
            android:textSize="16sp" />
        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0dip"
            android:background="@color/black2" />

        
        <TextView
            android:id="@+id/txt_dispatchCar"
            style="@style/TxtTitle"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:background="@drawable/setting_item_selector"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:paddingRight="10dp"
            android:text="@string/dispatchCar"
            android:textSize="16sp" />
        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0dip"
            android:background="@color/black2" />
        
        
         <TextView
            android:id="@+id/txt_dispatchStarttime"
            style="@style/TxtTitle"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:background="@drawable/setting_item_selector"
        
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:paddingRight="10dp"
            android:text="@string/dispatchStartTime"
            android:textSize="16sp" />
  <!--  <View
            android:layout_width="fill_parent"
            android:layout_height="1.0dip"
            android:background="@color/black2" />
        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0dip"
            android:background="@color/black2" />
        
       -->  
      
          
         <LinearLayout
				android:gravity="center"
				android:padding="20.0dip"
				android:layout_width="fill_parent"
				android:layout_height="80.0dip">
				
	          <Button
	              android:id="@+id/btn_dispatchOver"
	              android:textColor="@color/white"
	              android:layout_width="fill_parent"
	              android:layout_height="45dp"
	              android:background="@drawable/btn_bg_green"
	            android:padding="10.0dip"
	              android:text="@string/dispatchOver"
	              />
		</LinearLayout>
    </LinearLayout>
</ScrollView>
</LinearLayout>




  