<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <include  android:id="@+id/layout_bar" layout="@layout/putoff_title"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp" >
             <TextView
                android:id="@+id/txt_putoffcustomer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@drawable/setting_item_selector"
                android:paddingLeft="110dp"
                android:singleLine="true"
                android:textColorHint="#DDDDDD"
                android:textSize="16sp" />

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/txt_putoffcustomer"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/putoffcustomer"
                android:textColor="#353535"
                android:textSize="16sp" />
            
            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_alignParentBottom="true"
                android:background="#dbdbdb" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="48dp" >
			 <EditText
				android:id="@+id/et_putoffnum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:numeric="integer"
                android:background="@drawable/edittext_login"
                android:paddingLeft="110dp"
                android:singleLine="true"
                android:maxLength="11"
                android:textColorHint="#DDDDDD"
                android:textSize="16sp" />
            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
					android:text="@string/putoffNum" 
					android:singleLine="true"
                android:textColor="#353535"
                android:textSize="16sp" />
            <!-- 
               <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_alignParentBottom="true"
                android:background="#dbdbdb" />
                 -->
        </RelativeLayout>
        
        
		<RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="48dp" >
             <EditText
				android:id="@+id/et_putonnum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:numeric="integer"
                android:background="@drawable/edittext_login"
                android:paddingLeft="110dp"
                android:singleLine="true"
                android:maxLength="11"
                android:textColorHint="#DDDDDD"
                android:textSize="16sp" />
			   
            
            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
				android:text="@string/putonNum" 
				android:singleLine="true"
                android:textColor="#353535"
                android:textSize="16sp" />
              <!-- 
               <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_alignParentBottom="true"
                android:background="#dbdbdb" />
                -->
        </RelativeLayout>
        
		
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="48dp" >
			<RadioGroup 
			    android:id="@+id/rg_settletype"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_centerVertical="true"
				android:paddingRight="10dp"
				android:paddingLeft="100dp"
			    android:orientation="horizontal"
			    android:checkedButton="@+id/money">
			    <RadioButton android:id="@+id/rb_money"
			        android:layout_weight="1"
			        android:text="@string/money"/>
			    <RadioButton android:id="@+id/rb_debt"
			        android:layout_weight="1"
			        android:text="@string/debt"/>
			</RadioGroup>
            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
			    android:text="@string/settletype"
                android:textColor="#353535"
                android:textSize="16sp" />
               <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_alignParentBottom="true"
                android:background="#dbdbdb" />
        </RelativeLayout>
        
        <Button
	        android:id="@+id/btnsendmess"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/btn_bg_green"
            android:paddingBottom="7dp"
            android:paddingTop="7dp"
	        android:text="@string/sendMess"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
         
    </LinearLayout>

</LinearLayout>
