<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >
    

       <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="48dp" >

            <TextView
                android:id="@+id/txt_userinfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingRight="10dp"
                android:layout_marginLeft="20dp"
                android:text="@string/userinfo"
                android:textColor="#353535"
                android:textSize="16sp" />
             <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_alignParentBottom="true"
                android:background="#dbdbdb" />
             
        </RelativeLayout>
        
		<RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="48dp" >

		     <TextView
                android:id="@+id/txt_updatepsw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:drawableRight="@drawable/right"
                android:paddingRight="10dp"
                android:layout_marginLeft="20dp"
                android:text="@string/updatepsw"
                android:textColor="#353535"
                android:textSize="16sp" />
		     
             <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_alignParentBottom="true"
                android:background="#dbdbdb" />
            
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="48dp" >
              <TextView
                android:id="@+id/txt_printerset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:drawableRight="@drawable/right"
                android:paddingRight="10dp"
                android:layout_marginLeft="20dp"
                android:text="@string/printerset"
                android:textColor="#353535"
                android:textSize="16sp" />
         
               <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_alignParentBottom="true"
                android:background="#dbdbdb" />
        </RelativeLayout>
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="48dp" >

              <TextView
                android:id="@+id/txt_updateversion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:drawableRight="@drawable/right"
                android:paddingRight="10dp"
                android:layout_marginLeft="20dp"
                android:text="@string/updateversion"
                android:textColor="#353535"
                android:textSize="16sp" />
              
               <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_alignParentBottom="true"
                android:background="#dbdbdb" />
        </RelativeLayout>
        
         <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="48dp" >

               <TextView
                android:id="@+id/txt_aboutus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:drawableRight="@drawable/right"
                android:paddingRight="10dp"
                android:layout_marginLeft="20dp"
                android:text="@string/aboutus"
                android:textColor="#353535"
                android:textSize="16sp" />
               
               <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_alignParentBottom="true"
                android:background="#dbdbdb" />
        </RelativeLayout>

        
         <Button
            android:id="@+id/btnexit"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/btn_bg_green"
            android:paddingBottom="7dp"
            android:paddingTop="7dp"
            android:text="@string/logout"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>
