<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >	
	
	<FrameLayout
		android:id="@+id/fragment_dispatch_container"
		android:layout_width="fill_parent"
		android:layout_height="0dip"
		android:layout_weight="1" >
		
		<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp" >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="18dp"
                android:gravity="center_horizontal"
                android:text="@string/guideleft"
                android:textColor="#353535"
                android:textSize="16sp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_alignParentBottom="true"
                android:background="#dbdbdb" />
        </RelativeLayout>
         <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="18dp"
                android:gravity="center_horizontal"
                android:text="@string/guideright"
                android:textColor="#353535"
                android:textSize="16sp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_alignParentBottom="true"
                android:background="#dbdbdb" />
              <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_alignParentBottom="true"
                android:background="#dbdbdb" />
        </RelativeLayout>
        
	    <RelativeLayout
	        android:id="@+id/dispatching_box_1"
	        android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="48dp" >
            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_alignParentBottom="true"
                android:background="#dbdbdb" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/onDispatching"
                android:textColor="#353535"
                android:textSize="16sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/dispatching_box_2"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="48dp" >

            <TextView
                android:id="@+id/txt_dispatchPerson"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@drawable/setting_item_selector"
                android:paddingLeft="90dp"
                android:singleLine="true"
                android:textColorHint="#DDDDDD"
                android:textSize="16sp" />

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/txt_dispatchPerson"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/dispatchPerson"
                android:textColor="#353535"
                android:textSize="16sp" />
            
               <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_alignParentBottom="true"
                android:background="#dbdbdb" />
        </RelativeLayout>
        
		<RelativeLayout
		    android:id="@+id/dispatching_box_3"
		    android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="48dp" >

            <TextView
                android:id="@+id/txt_dispatchCar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@drawable/setting_item_selector"
                android:paddingLeft="90dp"
                android:singleLine="true"
                android:textColorHint="#DDDDDD"
                android:textSize="16sp" />

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/txt_dispatchCar"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/dispatchCar"
                android:textColor="#353535"
                android:textSize="16sp" />
               <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_alignParentBottom="true"
                android:background="#dbdbdb" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/dispatching_box_4"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="48dp" >

            <TextView
                android:id="@+id/txt_dispatchStarttime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@drawable/setting_item_selector"
                android:paddingLeft="90dp"
                android:singleLine="true"
                android:textColorHint="#DDDDDD"
                android:textSize="16sp" />

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/txt_dispatchStarttime"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/dispatchStartTime"
                android:textColor="#353535"
                android:textSize="16sp" />
               <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_alignParentBottom="true"
                android:background="#dbdbdb" />
        </RelativeLayout>
        <Button
            android:id="@+id/btn_dispatchOver"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/btn_bg_green"
            android:paddingBottom="7dp"
            android:paddingTop="7dp"
            android:text="@string/dispatchOver"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
         
    </LinearLayout>
	    
	</FrameLayout>
</LinearLayout>